--- a/libft/Makefile
+++ b/libft/Makefile
@@ -6,13 +6,13 @@
 #    By: tvallee <tvallee@student.42.fr>            +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2014/12/10 14:41:44 by tvallee           #+#    #+#              #
-#    Updated: 2018/03/01 13:28:04 by mdeville         ###   ########.fr        #
+#    Updated: 2018/03/08 11:23:59 by mdeville         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 NAME            = libft.a
 CC              = gcc
-CFLAGS         += -Wall -Wextra -Werror
+CFLAGS         += -Wall -Wextra -Werror -O3
 SRCDIR          = srcs/
 OBJDIR          = .obj/
 INCDIR          = includes/
